[package]
name = "stock_tracker"
version = "0.1.0"
authors = ["innfi"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "stock_tracker"

[dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
log = "0.4"
env_logger = "0.9.0"
actix-web = "4"
amiquip = { version = "0.4", default-features = false }
serde = "1.0.138"
serde_json = "1.0.82"
bincode = "1.2.1"
config = "0.11"
reqwest = "0.11"
json = "0.12.4"
redis = "0.21.5"
futures = "0.3.21"

[dev-dependencies]